Setting up lists view

--- a/sharedspace/Base.lproj/Main.storyboard
+++ b/sharedspace/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                                                 <constraint firstAttribute="width" constant="40" id="gvY-J6-42G"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Sharedspace with Tom" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TBu-UW-7Fa">
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TBu-UW-7Fa">
                                             <rect key="frame" x="94" y="12" width="238" height="80"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -51,6 +51,9 @@
                                         <constraint firstItem="K7h-8P-y7h" firstAttribute="leading" secondItem="d6p-hU-v17" secondAttribute="leadingMargin" constant="10" id="t0d-gR-1He"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="K4d-Nd-D9A" kind="show" id="YT1-EF-t1m"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -64,34 +67,54 @@
             </objects>
             <point key="canvasLocation" x="604.5" y="380.5"/>
         </scene>
-        <!--Root View Controller-->
-        <scene sceneID="X0d-Ga-7eY">
+        <!--Lists Table View Controller-->
+        <scene sceneID="zrq-ny-UHD">
             <objects>
-                <tableViewController id="yLm-Od-1P6" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="knz-RY-4nQ">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                <tableViewController id="K4d-Nd-D9A" customClass="ListsTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="61" sectionHeaderHeight="28" sectionFooterHeight="28" id="Q5S-I6-FsI">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <navigationBar key="tableHeaderView" contentMode="scaleToFill" id="EDy-3X-GjX">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <items>
+                                <navigationItem title="Lists" id="Lca-mm-I8r"/>
+                            </items>
+                        </navigationBar>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="dmn-6w-Oo2">
-                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="listsItem" rowHeight="61" id="Pgb-nR-fQj">
+                                <rect key="frame" x="0.0" y="72" width="375" height="61"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dmn-6w-Oo2" id="Sw9-d1-yY0">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Pgb-nR-fQj" id="obB-HG-huZ">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eKU-ur-3XE">
+                                            <rect key="frame" x="14" y="11" width="298" height="21"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="eKU-ur-3XE" firstAttribute="leading" secondItem="obB-HG-huZ" secondAttribute="leadingMargin" constant="20" id="7zV-fN-dt7"/>
+                                        <constraint firstItem="eKU-ur-3XE" firstAttribute="centerY" secondItem="obB-HG-huZ" secondAttribute="centerY" id="9f7-h2-yQT"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="eKU-ur-3XE" secondAttribute="trailing" constant="20" id="zjV-nQ-uSv"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="yLm-Od-1P6" id="hyw-eC-tSt"/>
-                            <outlet property="delegate" destination="yLm-Od-1P6" id="OOn-nV-cGN"/>
+                            <outlet property="dataSource" destination="K4d-Nd-D9A" id="WAf-CK-cGY"/>
+                            <outlet property="delegate" destination="K4d-Nd-D9A" id="uu3-v1-cHf"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="Bzr-5B-VoE"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="FTz-Je-laB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dZT-aC-WrP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="735" y="1142"/>
+            <point key="canvasLocation" x="1119.5" y="380.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="nJc-ke-Xcw">
@@ -101,9 +124,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
-                    <connections>
-                        <segue destination="yLm-Od-1P6" kind="relationship" relationship="rootViewController" id="9vr-cO-1ap"/>
-                    </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HbU-DF-77h" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
