--- a/sharedspace/Base.lproj/Main.storyboard
+++ b/sharedspace/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="JYh-tu-s2k">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="HZr-GJ-sdV">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -75,7 +75,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <navigationBar key="tableHeaderView" contentMode="scaleToFill" id="EDy-3X-GjX">
+                        <navigationBar key="tableHeaderView" tag="2" contentMode="scaleToFill" id="EDy-3X-GjX">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <items>
@@ -117,17 +117,87 @@
             <point key="canvasLocation" x="1119.5" y="380.5"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="nJc-ke-Xcw">
+        <scene sceneID="JMn-cE-J3s">
             <objects>
-                <navigationController id="WiP-6x-LVb" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Gr9-c3-fHI">
+                <navigationController id="HZr-GJ-sdV" sceneMemberID="viewController">
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FYi-9x-nXd">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
+                    <connections>
+                        <segue destination="xHI-J9-V0D" kind="relationship" relationship="rootViewController" id="9gz-6H-noq"/>
+                    </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="HbU-DF-77h" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bxg-az-cEG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-85" y="1142"/>
+            <point key="canvasLocation" x="604.5" y="1235.5"/>
+        </scene>
+        <!--The List Name-->
+        <scene sceneID="EUf-Gx-hWl">
+            <objects>
+                <viewController id="xHI-J9-V0D" customClass="EditListViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Ndg-50-MeB"/>
+                        <viewControllerLayoutGuide type="bottom" id="DF9-s1-FOz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="h3B-zo-B2G">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a7X-tP-vth">
+                                <rect key="frame" x="80" y="74" width="47" height="30"/>
+                                <state key="normal" title="Bullets"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LJk-D9-R5M">
+                                <rect key="frame" x="152" y="74" width="63" height="30"/>
+                                <state key="normal" title="Numbers"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IYa-s5-erc">
+                                <rect key="frame" x="240" y="74" width="55" height="30"/>
+                                <state key="normal" title="Todos"/>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gbp-t3-Qsr">
+                                <rect key="frame" x="25" y="134" width="325" height="200"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="325" id="MDb-GL-hEq"/>
+                                    <constraint firstAttribute="height" constant="400" id="aSU-af-KRD"/>
+                                </constraints>
+                                <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="a7X-tP-vth" firstAttribute="top" secondItem="Ndg-50-MeB" secondAttribute="bottom" constant="10" id="Bn3-Jt-Fk4"/>
+                            <constraint firstItem="gbp-t3-Qsr" firstAttribute="top" secondItem="LJk-D9-R5M" secondAttribute="bottom" constant="30" id="HoR-9i-cRz"/>
+                            <constraint firstItem="gbp-t3-Qsr" firstAttribute="centerX" secondItem="h3B-zo-B2G" secondAttribute="centerX" id="SyH-aR-u1m"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gbp-t3-Qsr" secondAttribute="trailing" constant="25" id="UtI-aJ-szM"/>
+                            <constraint firstItem="IYa-s5-erc" firstAttribute="centerY" secondItem="LJk-D9-R5M" secondAttribute="centerY" id="YZO-l5-akg"/>
+                            <constraint firstItem="LJk-D9-R5M" firstAttribute="leading" secondItem="a7X-tP-vth" secondAttribute="trailing" constant="25" id="hi6-Kt-g7S"/>
+                            <constraint firstItem="a7X-tP-vth" firstAttribute="leading" secondItem="h3B-zo-B2G" secondAttribute="leadingMargin" constant="64" id="iZb-V4-NWd"/>
+                            <constraint firstItem="IYa-s5-erc" firstAttribute="leading" secondItem="LJk-D9-R5M" secondAttribute="trailing" constant="25" id="jLM-pv-LaI"/>
+                            <constraint firstItem="IYa-s5-erc" firstAttribute="baseline" secondItem="LJk-D9-R5M" secondAttribute="baseline" id="mx1-zQ-pBb"/>
+                            <constraint firstItem="LJk-D9-R5M" firstAttribute="baseline" secondItem="a7X-tP-vth" secondAttribute="baseline" id="n1I-4h-AOp"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="IYa-s5-erc" secondAttribute="trailing" constant="64" id="oZD-hH-dRp"/>
+                            <constraint firstItem="gbp-t3-Qsr" firstAttribute="leading" secondItem="h3B-zo-B2G" secondAttribute="leadingMargin" constant="25" id="t60-wZ-y20"/>
+                            <constraint firstItem="LJk-D9-R5M" firstAttribute="centerY" secondItem="a7X-tP-vth" secondAttribute="centerY" id="wHK-ay-Gnh"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="n1I-4h-AOp"/>
+                                <exclude reference="mx1-zQ-pBb"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <navigationItem key="navigationItem" title="The List Name" id="vTu-zs-a8t"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="p7m-e7-KMZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1119.5" y="1235.5"/>
         </scene>
     </scenes>
 </document>
