--- a/sharedspace/Base.lproj/Main.storyboard
+++ b/sharedspace/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="HZr-GJ-sdV">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="JYh-tu-s2k">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -29,26 +29,26 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="104"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="K7h-8P-y7h">
-                                            <rect key="frame" x="17" y="22" width="60" height="60"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="40" id="XJa-xe-8FO"/>
-                                                <constraint firstAttribute="width" constant="40" id="gvY-J6-42G"/>
-                                            </constraints>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TBu-UW-7Fa">
-                                            <rect key="frame" x="94" y="12" width="238" height="80"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TBu-UW-7Fa">
+                                            <rect key="frame" x="98" y="52" width="234" height="0.0"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <imageView userInteractionEnabled="NO" tag="2" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yqo-O8-ueu">
+                                            <rect key="frame" x="23" y="22" width="60" height="60"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="60" id="dvQ-SY-p2m"/>
+                                                <constraint firstAttribute="width" constant="60" id="rR0-lD-dNO"/>
+                                            </constraints>
+                                        </imageView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="TBu-UW-7Fa" firstAttribute="leading" secondItem="K7h-8P-y7h" secondAttribute="trailing" constant="20" id="Ihz-tt-hw3"/>
                                         <constraint firstItem="TBu-UW-7Fa" firstAttribute="centerY" secondItem="d6p-hU-v17" secondAttribute="centerY" id="NRH-67-Re4"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="TBu-UW-7Fa" secondAttribute="trailing" constant="35" id="SBH-3s-rmo"/>
-                                        <constraint firstItem="K7h-8P-y7h" firstAttribute="centerY" secondItem="d6p-hU-v17" secondAttribute="centerY" id="lPd-2B-vUA"/>
-                                        <constraint firstItem="K7h-8P-y7h" firstAttribute="leading" secondItem="d6p-hU-v17" secondAttribute="leadingMargin" constant="10" id="t0d-gR-1He"/>
+                                        <constraint firstItem="TBu-UW-7Fa" firstAttribute="leading" secondItem="yqo-O8-ueu" secondAttribute="trailing" constant="15" id="jpU-Lx-hNl"/>
+                                        <constraint firstItem="yqo-O8-ueu" firstAttribute="leading" secondItem="d6p-hU-v17" secondAttribute="leadingMargin" constant="15" id="oTt-Np-TzO"/>
+                                        <constraint firstItem="yqo-O8-ueu" firstAttribute="centerY" secondItem="d6p-hU-v17" secondAttribute="centerY" id="y2I-zP-9kr"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -103,6 +103,9 @@
                                         <constraint firstAttribute="trailingMargin" secondItem="eKU-ur-3XE" secondAttribute="trailing" constant="20" id="zjV-nQ-uSv"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="HZr-GJ-sdV" kind="show" id="aZa-kZ-Imp"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -114,7 +117,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dZT-aC-WrP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1119.5" y="380.5"/>
+            <point key="canvasLocation" x="1104.5" y="380.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="JMn-cE-J3s">
@@ -131,7 +134,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bxg-az-cEG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="604.5" y="1235.5"/>
+            <point key="canvasLocation" x="1717.5" y="380.5"/>
         </scene>
         <!--The List Name-->
         <scene sceneID="EUf-Gx-hWl">
@@ -211,7 +214,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p7m-e7-KMZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1119.5" y="1235.5"/>
+            <point key="canvasLocation" x="2246.5" y="380.5"/>
         </scene>
     </scenes>
 </document>
