Add skeleton/containers for content of list view.

--- a/sharedspace/Base.lproj/Main.storyboard
+++ b/sharedspace/Base.lproj/Main.storyboard
@@ -102,14 +102,52 @@
                                     </mask>
                                 </variation>
                             </collectionView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eYa-M1-22f">
+                                <rect key="frame" x="-4" y="30" width="383" height="573"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Og-pL-w9g">
+                                        <rect key="frame" x="0.0" y="0.0" width="383" height="0.0"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1000" id="zMB-dO-shO"/>
+                                        </constraints>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oku-GV-lBe">
+                                        <rect key="frame" x="163" y="54" width="46" height="30"/>
+                                        <state key="normal" title="Button"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="0.93929566575766521" blue="0.64566200316370392" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="375" id="3Vl-Uc-UeZ"/>
+                                    <constraint firstItem="1Og-pL-w9g" firstAttribute="width" secondItem="eYa-M1-22f" secondAttribute="width" id="DFz-bc-uZX"/>
+                                    <constraint firstAttribute="bottom" secondItem="1Og-pL-w9g" secondAttribute="bottom" id="Gnm-I0-ZYy"/>
+                                    <constraint firstItem="1Og-pL-w9g" firstAttribute="leading" secondItem="eYa-M1-22f" secondAttribute="leading" id="HRy-gt-epG"/>
+                                    <constraint firstItem="Oku-GV-lBe" firstAttribute="top" secondItem="eYa-M1-22f" secondAttribute="top" constant="54" id="L13-4e-et6"/>
+                                    <constraint firstItem="Oku-GV-lBe" firstAttribute="centerX" secondItem="1Og-pL-w9g" secondAttribute="centerX" id="cfd-qG-fn5"/>
+                                    <constraint firstAttribute="height" constant="1000" id="dXS-qx-Pn9"/>
+                                    <constraint firstAttribute="trailing" secondItem="1Og-pL-w9g" secondAttribute="trailing" id="p10-PQ-hbp"/>
+                                    <constraint firstItem="1Og-pL-w9g" firstAttribute="top" secondItem="eYa-M1-22f" secondAttribute="top" id="yp1-l9-GFA"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="3Vl-Uc-UeZ"/>
+                                        <exclude reference="dXS-qx-Pn9"/>
+                                    </mask>
+                                </variation>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="5Wr-ka-XeI" firstAttribute="leading" secondItem="Ki6-Ri-CO2" secondAttribute="leading" id="2jL-he-sjp"/>
+                            <constraint firstItem="eYa-M1-22f" firstAttribute="top" secondItem="5Wr-ka-XeI" secondAttribute="bottom" id="Cea-H3-GlW"/>
                             <constraint firstItem="5Wr-ka-XeI" firstAttribute="leading" secondItem="Ki6-Ri-CO2" secondAttribute="leadingMargin" id="IoQ-Qs-jvt"/>
                             <constraint firstItem="5Wr-ka-XeI" firstAttribute="top" secondItem="2hI-3Z-3bD" secondAttribute="bottom" id="KhW-OB-6xW"/>
                             <constraint firstItem="5Wr-ka-XeI" firstAttribute="width" secondItem="Ki6-Ri-CO2" secondAttribute="width" id="NRf-f7-UEZ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="eYa-M1-22f" secondAttribute="trailing" constant="-20" id="Nfo-hd-4hx"/>
                             <constraint firstAttribute="trailingMargin" secondItem="5Wr-ka-XeI" secondAttribute="trailing" id="Qex-1l-uNW"/>
+                            <constraint firstItem="pKL-YE-Ou6" firstAttribute="top" secondItem="eYa-M1-22f" secondAttribute="bottom" id="TEp-bw-bQX"/>
+                            <constraint firstItem="eYa-M1-22f" firstAttribute="leading" secondItem="Ki6-Ri-CO2" secondAttribute="leadingMargin" constant="-20" id="Tpz-6E-Tg1"/>
                             <constraint firstItem="5Wr-ka-XeI" firstAttribute="top" secondItem="2hI-3Z-3bD" secondAttribute="bottom" id="WUg-eK-NAN"/>
                             <constraint firstAttribute="trailing" secondItem="5Wr-ka-XeI" secondAttribute="trailing" id="med-wQ-5HB"/>
                         </constraints>
